Fri Nov 22 14:03:00 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/nkf: merge nkf 2.1.3 2a2f2c5.

Fri Nov 22 12:43:52 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* util.c (ruby_strtod): ignore too long fraction part, which does not
	  affect the result.

Fri Nov 22 12:17:14 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/openssl/lib/openssl/buffering.rb (OpenSSL::Buffering#initialize):
	  initialize of a module should pass arguments to super.

Fri Nov 22 12:02:58 2013  Tanaka Akira  <akr@fsij.org>

	* test/ruby/test_settracefunc.rb: Ignore events from other threads.

Fri Nov 22 10:35:57 2013  Koichi Sasada  <ko1@atdot.net>

	* vm.c (ruby_vm_destruct): do not use ruby_xfree() after freeing
	  objspace.

	* gc.c (ruby_mimfree): added. It is similar to ruby_mimmalloc().

	* internal.h: ditto.

Fri Nov 22 09:42:35 2013  Zachary Scott  <e@zzak.io>

	* test/digest/test_digest.rb: Reverse order of assert_equal
	  Reported by @splattael

Fri Nov 22 09:03:16 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* gc.c: fix build failure on FreeBSD introduced by r43763.
	  malloc_usable_size() is defined by malloc_np.h on FreeBSD.

	* configure.in: check malloc.h and malloc_np.h.

Fri Nov 22 08:27:13 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems:  Update to RubyGems master 50a8210.  Important changes
	  in this commit:

	  RubyGems now automatically checks for gem.deps.rb or Gemfile when
	  running ruby executables.  This behavior is similar to `bundle exec
	  rake`.  This change may be reverted before Ruby 2.1.0 if too many bugs
	  are found.

	* test/rubygems:  ditto.

Thu Nov 21 22:33:59 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c: RGENGC_CHECK_MODE should be 0.

Thu Nov 21 21:40:00 2013  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.c (VpAlloc): Fix the expr to adjust the size
	  of the digit array.

Thu Nov 21 21:36:00 2013  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.c (BigDecimal_sqrt): Fix the precision of