@@ -1,3 +1,7 @@
+Fri Nov 22 14:31:00 2013  Kenta Murata  <mrkn@mrkn.jp>
+
+	* ext/bigdecimal/bigdecimal.c: Fix indentation.
+
 Fri Nov 22 14:03:00 2013  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* ext/nkf: merge nkf 2.1.3 2a2f2c5.
